<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BACFragment">

    <TextView
        android:id="@+id/weightDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight_2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/weight_display"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/weightDisplayText"
        app:layout_constraintStart_toEndOf="@+id/weightDisplayText"  />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reset_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDrinkButton" />

    <Button
        android:id="@+id/addDrinkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/add_drink"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDrinksButton" />

    <Button
        android:id="@+id/viewDrinksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/view_drinks"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/numDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/num_drinks_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightDisplay" />

    <TextView
        android:id="@+id/numDrinkDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/num_drinks"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/numDrinks"
        app:layout_constraintStart_toEndOf="@+id/numDrinks"
        app:layout_constraintTop_toTopOf="@+id/numDrinks" />

    <TextView
        android:id="@+id/BACLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/BAC_level"
        android:textAllCaps="false"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDrinks" />

    <TextView
        android:id="@+id/bacLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/BAC_num"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/BACLevel"
        app:layout_constraintStart_toEndOf="@+id/BACLevel"
        app:layout_constraintTop_toTopOf="@+id/BACLevel" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/status_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BACLevel" />

    <TextView
        android:id="@+id/status"
        android:layout_width="134dp"
        android:layout_height="26dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/statusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusText"
        app:layout_constraintTop_toTopOf="@+id/statusText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/set"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/weightDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weightDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>