<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddDrinkFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddDrinkActivity">

        <Button
            android:id="@+id/cancelButton2"
            android:layout_width="184dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/addDrinkButton2"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addDrinkButton2" />

        <Button
            android:id="@+id/addDrinkButton2"
            android:layout_width="181dp"
            android:layout_height="43dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_drink"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/viewProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:max="30"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="@+id/alcoholPercentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alcoholPercentage"
            app:layout_constraintTop_toTopOf="@+id/alcoholPercentage" />

        <TextView
            android:id="@+id/alcoholPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/alcohol_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/drinkSize"
            app:layout_constraintTop_toBottomOf="@+id/drinkSize" />

        <RadioGroup
            android:id="@+id/drink_size_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/drinkSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/drinkSize"
            app:layout_constraintTop_toTopOf="@+id/drinkSize">

            <RadioButton
                android:id="@+id/one_oz"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/one_oz" />

            <RadioButton
                android:id="@+id/five_oz"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:text="@string/five_oz" />

            <RadioButton
                android:id="@+id/twelve_oz"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/twelve_oz" />

        </RadioGroup>

        <TextView
            android:id="@+id/drinkSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/drink_size"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/drinkSize2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/drink_size"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>